2007-06-20 Dan Nicholson <dnicholson@linuxfromscratch.org>
	* Use proper references for the pid and lease files in the dhcpcd
	  service script.

2006-10-11 Dan Nicholson <dnicholson@linuxfromscratch.org>
	* Fixed gpm boot script to accept multiple arguments in the
	  variables, particularly GPMOPTS. Thanks to Christoph Felkes
	  for supplying the fix.

2006-06-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Updated the openldap and nfs-server scripts to pass appropriate
	  signals to the stop functions.  This change was due to changes
	  in the LFS functions script on 2/06/05!

2006-06-24 Randy McMurchy <randy@linuxfromscratch.org>
	* Updated the HAL script to work with HAL-0.5.7

2006-06-23 Randy McMurchy <randy@linuxfromscratch.org>
	* Updated the GDM script to the 2.14.2 version of GNOME

2006-06-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Updated bind to refer to /srv/named

2006-04-30 Randy McMurchy <randy@linuxfromscratch.org>
	* Added a command to delete a pid file that the NFS server
	  leaves behind

2006-04-27 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Changed autofs order number to 52 so it will be run after cleanfs

2006-04-23 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Added qpopper initailization script and updated the Makefile

2006-04-15 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Updated the ssh shutdown script to wait one second before setting OOM value

2006-04-11 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Updated the netfs shutdown script to avoid errors with multiple entries

2006-04-11 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Updated the sshd script to prevent killing ssh in Out Of Memory conditions

2006-02-05 Randy McMurchy <randy@linuxfromscratch.org>
	* Updated the GDM script to the 2.12.2 version of GNOME

2006-01-01 Randy McMurchy <randy@linuxfromscratch.org>
	* Changed the name of the D-BUS pid file that is removed

2005-11-21 Randy McMurchy <randy@linuxfromscratch.org>