@@ -292,7 +292,7 @@ $Date$
 
 <!-- Chapter 14 -->
 <!ENTITY dhcp-version                 "3.0.5">
-<!ENTITY dhcpcd-version               "2.0.8">
+<!ENTITY dhcpcd-version               "3.0.17">
 
 <!-- Chapter 15 -->
 <!ENTITY pppoe-version                "3.8">
